[package]
name = "kvstore"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["fs"] }
tokio-util = "0.6.3"
futures = "0.3"
log = "0"
env_logger = "0.9.3"
async-trait = "0.1"
async-std = { version = "1.12.0", features = ["attributes"] }
thiserror = "1"
signal-hook = "0.3.15"
anyhow = "1"
url = "2.3"
bytes = "1"
bytesize = "1.3.0"
reqwest = { version = "0.12.5" }
axum = { version = "0.7", features = ["multipart"] }
axum-macros = "0.4"
tower-http = { version = "0.5.1", features = ["cors", "compression-gzip", "trace"] }
hyper = { version = "1.1", features = ["full"] }
slatedb = { version = "0.4" }
object_store = { version = "0.11.2", features = ["aws"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
panic = "abort"